--- a/index.html
+++ b/index.html
@@ -70,31 +70,6 @@
             </ul>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
