--- a/weather/index.html
+++ b/weather/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700;800&family=Lora:wght@400;600&family=Noto+Serif:ital,wght@1,600&family=Rubik:ital@1&display=swap" rel="stylesheet">
     <title>Weather</title>
 </head>
-<body>
+<body class="background">
     <div class="weather-app">
         <div class="container">
             <div class="content">
