check weather condition

--- a/weather/index.html
+++ b/weather/index.html
@@ -48,9 +48,9 @@
                 </button>
             </form>
             <ul class="cities">
-                <li class="city">New York</li>
-                <li class="city">California</li>
+                <li class="city">Mauritius</li>
                 <li class="city">Paris</li>
+                <li class="city">New York</li>
                 <li class="city">Tokyo</li>
             </ul>
             <ul class="details">
@@ -70,31 +70,6 @@
             </ul>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="script.js"></script>
 </body>
 </html>
