--- a/weather/index.html
+++ b/weather/index.html
@@ -17,7 +17,7 @@
             </div>
             <div>
                 <h1 class="temp">16 &#176;</h1>
-                div class="city-name">
+                <div class="city-name">
                     <h1 class="name">London</h1>
                     <small>
                         <span class="time">06:09</span>
